--- a/src/main/webapp/ForgetPassword.html
+++ b/src/main/webapp/ForgetPassword.html
@@ -4,8 +4,10 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
-<body>
-<h1>Enter Below Details</h1>
+<body style='background:url(https://wallpapercave.com/wp/wp498614.jpg);
+background-size:cover'>
+<center>
+<h1 style='color:white'>Enter Below Details</h1>
 <form action="forgotpassword" method="post">
 Userid: <input type="text" name="userid"><br>
 Mobile: <input type="text" name="mobile"><br>
@@ -15,5 +17,6 @@ New Password: <input type="password" name="password"><br>
 </form><br>
 <br>
 <a href="Home.html"><button>Home</button></a>
+</center>
 </body>
 </html>
