--- a/src/main/webapp/ManagementHome.html
+++ b/src/main/webapp/ManagementHome.html
@@ -7,9 +7,13 @@
 <body style='background:url(https://ichef.bbci.co.uk/news/976/cpsprodpb/5F3D/production/_125318342_railworkers.jpg);
 background-size:cover'>
 <center>
+<div style=' margin-left:500px;margin-top:20px;position:absolute;background:rgba(0,0,0,.6);'>
 <h1 style='color:white'>Welcome to Railway Management</h1>
 <a href="AddRailway.html"><button>Add Railway Info</button></a><br><br>
 <a href="fetchalltrain"><button>View Existing Railway Info</button></a><br>
+<br>
+<a href="Home.html"><button>Home</button></a>
+</div>
 </center>
 </body>
 </html>
