--- a/src/main/webapp/ManagementLogin.html
+++ b/src/main/webapp/ManagementLogin.html
@@ -5,7 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body style='background:url(https://images4.alphacoders.com/150/thumb-1920-150168.jpg); background-size:cover'>
+
 <center>
+<div style=' margin-left:500px;margin-top:20px;position:absolute;background:rgba(0,0,0,.6);'>
 <h1 style='color:white'>Management Login</h1>
 <form action="managementlogin" method="post">
 <h5 style='color:white'>Email: <input type="text" name="email"></h5>
@@ -13,7 +15,9 @@
 <button type="reset">Cancel</button><space><button>Login</button>
 </form>
 <br><br>
-<a href="Home.html"><button>Home</button></a>
+<a href="Home.html"><button>Home</button></a><br><br>
+</div>
 </center>
+
 </body>
 </html>
