--- a/src/main/webapp/UserHome.html
+++ b/src/main/webapp/UserHome.html
@@ -5,6 +5,13 @@
 <title>Insert title here</title>
 </head>
 <body>
-User Home
+<h1 style='color:blue'>WELCOME TO CUSTOMER HOME</h1>
+
+<tr><a href="usertraininfo"><button>View Available Train</button></a></tr><br><br>
+<tr><a href="EnterTrainNumber.jsp"><button>Book Ticket</button></a></tr><br><br>
+<tr><a href="cancelticket"><button>Cancel Ticket</button></a></tr><br><br>
+<tr><a href=""><button>View All Ticket Booking</button></a></tr><br><br>
+<tr><a href="AddMoney.jsp"><button>Add Money To Wallet</button></a></tr><br><br>
+<tr><a href="logout"><button>Logout</button></a></tr><br>
 </body>
 </html>
