--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -8,7 +8,7 @@
 background-size:cover'>
 <marquee><h1 style='color:white'>Railway Home</h1></marquee><br>
 <center>
-<div>
+<div style='margin-left:540px;position: absolute; background:rgba(0,0,0,.5);'>
 <a href="Register.html"><button>Register</button></a><br><br>
 <a href="Login.html"><button>Login</button></a><br><br>
 <a href="ManagementLogin.html"><button>Management Login</button></a><br><br></div>
