--- a/src/main/webapp/Login.html
+++ b/src/main/webapp/Login.html
@@ -7,6 +7,7 @@
 <body style='background:url(https://c8.alamy.com/comp/2G350RH/indian-railways-train-kirandul-passenger-running-through-araku-valley-andhra-pradesh-india-2G350RH.jpg);
 background-size:cover'>
 <center>
+<div style='margin-left:500px; margin-top:100px;position: absolute; background:rgba(0,0,0,.6);'>>
 <h1 style='color:white'>Login User</h1>
 <form action="login" method="post">
 <table>
@@ -30,7 +31,8 @@ background-size:cover'>
 <br>
 <a style='color:white' href="Register.html">New? Click here to Create Account</a>
 <br><br>
-<a href="Home.html"><button>Home</button></a>
+<a href="Home.html"><button>Home</button></a><br><br>
+</div>
 </center>
 </body>
 </html>
