--- a/src/main/webapp/Register.html
+++ b/src/main/webapp/Register.html
@@ -7,43 +7,44 @@
 <body style='background:url(https://wallpaperaccess.com/full/1457225.jpg);
 background-size:cover'>
 <center>
+<div style='margin-left:450px;margin-top:80px;position: absolute; background:rgba(0,0,0,.6) '>
 <h1 style='color:white'>Register Here</h1>
 <br>
 <form action="register" method="post">
 <table>
 <tr>
-<th>First name:</th>
+<th style='color:white'>First name:</th>
 <th><input type="text" name="first" required="required"></th>
 </tr>
 <tr>
-<th>Last name:</th>
+<th style='color:white'>Last name:</th>
 <th><input type="text" name="last" required="required"></th>
 </tr>
 <tr>
-<th>Mobile:</th>
+<th style='color:white'>Mobile:</th>
 <th><input type="tel" pattern="[0-9]{10}" name="mobile" required="required"></th>
 </tr>
 <tr>
-<th>Email:</th>
+<th style='color:white'>Email:</th>
 <th><input type="email" name="email" required="required"></th>
 </tr>
 <tr>
-<th>Gender:</th>
+<th style='color:white'>Gender:</th>
 <th>
-<input type="radio" name="gender" value="male" required="required">Male
+<input type="radio" name="gender" value="male" required="required" >Male
 <input type="radio" name="gender" value="female">Female
 </th>
 </tr>
 <tr>
-<th>Create Password:</th>
+<th style='color:white'>Create Password:</th>
 <th><input type="password" name="password1" id="pass" required="required"></th>
 </tr>
 <tr>
-<th>Confirm Password:</th>
+<th style='color:white'>Confirm Password:</th>
 <th><input type="password" name="password2"  id="cpass" required="required"></th>
 </tr>
 <tr>
-<th>Date of Birth:</th>
+<th style='color:white'>Date of Birth:</th>
 <th><input type="date" name="dob" required="required"></th>
 </tr>
 <tr>
@@ -54,9 +55,10 @@ background-size:cover'>
 </table>
 </form>
 <br>
-<a style='color:white' href="Login.html">Already have account? Click here to Login</a>
+<a style='color:red' href="Login.html">Already have account? Click here to Login</a>
 <br><br>
-<a href="Home.html"><button>Home</button></a>
+<a href="Home.html"><button>Home</button></a><br><br>
+</div>
 </center>
 </body>
 </html>
