--- a/src/main/webapp/UserHome.html
+++ b/src/main/webapp/UserHome.html
@@ -9,9 +9,10 @@
 
 <tr><a href="usertraininfo"><button>View Available Train</button></a></tr><br><br>
 <tr><a href="EnterTrainNumber.jsp"><button>Book Ticket</button></a></tr><br><br>
-<tr><a href="cancelticket"><button>Cancel Ticket</button></a></tr><br><br>
-<tr><a href=""><button>View All Ticket Booking</button></a></tr><br><br>
+<a href="CancelTicket.jsp"><button>Cancel Ticket</button></a><br><br>
+<a href="ViewBookedTicket.jsp"><button>View Booked Tickets</button></a><br><br>
 <tr><a href="AddMoney.jsp"><button>Add Money To Wallet</button></a></tr><br><br>
+<a href="ViewBalance.jsp"><button>Check Balance</button></a><br><br>
 <tr><a href="logout"><button>Logout</button></a></tr><br>
 </body>
 </html>
